# ferrumc

./: .gitignore  Cargo.toml  rustc-ice-2024-10-26T22_41_12-25407.txt
.etc/: example_config.toml
book/: book.toml  custom.css
book/src/: SUMMARY.md  getting_started.md  introduction.md
src/lib/adapters/nbt/: Cargo.toml
src/lib/adapters/nbt/src/: errors.rs
src/lib/adapters/nbt/src/de/: borrow.rs  converter.rs
src/lib/adapters/nbt/src/ser/: impl.rs  mod.rs
src/lib/derive_macros/src/: helpers.rs  lib.rs
src/lib/derive_macros/src/events/: mod.rs
src/lib/derive_macros/src/nbt/: de.rs  helpers.rs  ser.rs
src/lib/derive_macros/src/net/: encode.rs
src/lib/derive_macros/src/net/packets/: mod.rs
src/lib/ecs/src/: errors.rs  lib.rs  query.rs
src/lib/events/: Cargo.toml
src/lib/events/src/: infrastructure.rs
src/lib/net/: Cargo.toml
src/lib/net/crates/codec/src/: lib.rs
src/lib/net/crates/codec/src/decode/: primitives.rs
src/lib/net/src/: connection.rs  errors.rs
src/lib/net/src/packets/incoming/: chat_message.rs  mod.rs  server_bound_known_packs.rs  server_bound_plugin_message.rs
src/lib/net/src/packets/outgoing/: client_bound_plugin_message.rs  disconnect.rs  login_success.rs  mod.rs  player_info_update.rs
src/lib/scheduler/: Cargo.toml
src/lib/scheduler/src/: errors.rs  lib.rs  tests.rs
src/lib/storage/src/: lib.rs
src/lib/text/: Cargo.toml  foo1.hex  foo2.hex
src/lib/text/src/: builders.rs  color.rs  impl.rs  lib.rs  tests.rs  utils.rs
src/lib/utils/config/src/: lib.rs  server_config.rs
(+3 files in other folders)
