[package]
name = "ferrumc-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
ferrumc-net = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
ferrumc-ecs = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
