[package]
name = "ferrumc-text"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrumc-net-codec = { workspace = true }
ferrumc-nbt = { workspace = true }
ferrumc-macros = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
#derive_builder = "0.20.2"

[dev-dependencies]
ferrumc-config = { workspace = true }
flate2 = { workspace = true }

[lints]
workspace = true
